tests/fixtures/invalid/sum_bool.py
# Cannot call sum() with Bool
x = sum(True)
